--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
             "name": "MySQL Local",
             "database": "mansidb",
             "username": "root",
-            "password": "M@n$!kum12",
+            "password": "",
             "connectionTimeout": 30
         }
     ]
